# PyInTheSky

./: .gitignore  README.md
hw_1/artifacts/nl/: OUTPUT.txt
hw_1/artifacts/tail/: OUTPUT.txt  test1.txt  test2.txt
hw_1/artifacts/wc/: OUTPUT.txt
hw_1/nl/: pynl.py
hw_1/tail/: pytail.py
hw_1/wc/: pywc.py
hw_2/: Dockerfile
hw_2/artifacts/task_1/: example_table.tex
hw_2/artifacts/task_2/: libraty_link
hw_2/artifacts/task_3/: docker-compose.yaml
hw_2/library_usage/: generate_file.py  pyproject.toml
hw_2/pylatex_sssi111/: pyproject.toml
hw_2/pylatex_sssi111/examples/: usage.py
hw_2/pylatex_sssi111/pylatex_sssi111/: __init__.py  latex_generator.py
hw_2/pylatex_sssi111/tests/: test_latex_generator.py
hw_3/artifacts/task_3/: AB.txt  C.txt  CD.txt  hash.txt
hw_3/my_matrix/: README.md  find_collision.py  pyproject.toml  usage_1.py
hw_3/my_matrix/src/: __init__.py  matrix.py  matrix_hash.py
hw_3/my_matrix/tests/: test_matrix.py
hw_3/my_matrix_over_numpy/: pyproject.toml  usage.py
hw_3/my_matrix_over_numpy/src/: __init__.py  arithmetic.py
hw_3/my_matrix_over_numpy/tests/: test_arithmetic.py
hw_4/artifacts/task_1/: results.txt
hw_4/artifacts/task_2/: results.csv  results.txt
hw_4/fib/: bench.py  pyproject.toml
hw_4/integrate/: bench.py  pyproject.toml
hw_5/artifacts/task2/: yandex_realty.json
hw_5/async_load/: downloader.py  pyproject.toml
hw_5/real_estate_scraper/: pyproject.toml
hw_5/real_estate_scraper/real_estate_scraper/: __init__.py  main.py
hw_5/real_estate_scraper/real_estate_scraper/data/: data_manager.py
hw_5/real_estate_scraper/real_estate_scraper/scrapers/: base.py  yandex_realty.py
hw_5/real_estate_scraper/real_estate_scraper/scrapers/parsers/: yandex_realty_parser.py
