[tool.poetry]
name = "my-matrix"
version = "0.1.0"
description = ""
authors = ["Andrew Panov <gooday358@gmail.com>"]
readme = "README.md"
packages = [
{ include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
